<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorSemList"
    app:cardCornerRadius="5dp"
    app:cardElevation="@dimen/cardview_default_elevation">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/calModuleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calCreditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calModuleName"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/credits"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calCreditVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calModuleName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/calCreditName"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calCreditResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calCreditName"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/results"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calCreditName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/calCreditResult"
            android:scrollbars="none">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/A_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/A_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/B_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/B_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/C_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/C_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/j"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/I"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/k"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

                <RadioButton
                    android:id="@+id/F"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/l"
                    android:buttonTint="@color/colorText"
                    android:textColor="@color/colorText"/>

            </RadioGroup>
        </HorizontalScrollView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
